--- a/smart-city/src/main/res/values/styles.xml
+++ b/smart-city/src/main/res/values/styles.xml
@@ -5,4 +5,6 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <color name="backgroundOverlayCamera">#8c000000</color>
+
 </resources>
