--- a/smart-city/src/main/res/values/styles.xml
+++ b/smart-city/src/main/res/values/styles.xml
@@ -6,5 +6,6 @@
     </style>
 
     <color name="backgroundOverlayCamera">#8c000000</color>
+    <color name="hintColor">#ffa3a3a3</color>
 
 </resources>
