--- a/smart-city/src/main/res/layout/activity_main.xml
+++ b/smart-city/src/main/res/layout/activity_main.xml
@@ -98,4 +98,61 @@
             android:src="@drawable/take_picture" />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/commentOverlay"
+        android:layout_width="fill_parent"
+        android:layout_height="140dp"
+        android:background="@color/backgroundOverlayCamera"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView3"
+            android:layout_alignBottom="@+id/sendButton"
+            android:layout_alignLeft="@+id/editText"
+            android:layout_alignStart="@+id/editText"
+            android:layout_below="@+id/editText"
+            android:layout_toLeftOf="@+id/sendButton"
+            android:layout_toStartOf="@+id/sendButton"
+            android:gravity="center_vertical"
+            android:textColor="@android:color/white"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/send_button"
+            android:id="@+id/sendButton"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:textColor="@android:color/white"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:ems="10"
+            android:id="@+id/editText"
+            android:layout_above="@+id/sendButton"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignRight="@+id/sendButton"
+            android:layout_alignEnd="@+id/sendButton"
+            android:layout_alignParentTop="true"
+            android:textColor="@android:color/white"
+            android:gravity="top"
+            android:hint="@string/comment_hint"
+            android:textColorHint="@color/hintColor"
+            android:textCursorDrawable="@null"/>
+    </RelativeLayout>
+
 </RelativeLayout>
