--- a/smart-city/src/main/res/layout/activity_main.xml
+++ b/smart-city/src/main/res/layout/activity_main.xml
@@ -115,8 +115,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/textView3"
+            android:text=""
+            android:id="@+id/positionTextView"
             android:layout_alignBottom="@+id/sendButton"
             android:layout_alignLeft="@+id/editText"
             android:layout_alignStart="@+id/editText"
