--- a/smart-city/src/main/res/layout/activity_main.xml
+++ b/smart-city/src/main/res/layout/activity_main.xml
@@ -19,45 +19,59 @@
     <RelativeLayout
         android:id="@+id/welcomeOverlay"
         android:layout_width="fill_parent"
-        android:layout_height="250dp"
-        android:layout_marginTop="80dp"
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="20dp"
+        android:layout_height="fill_parent"
         android:background="@color/backgroundOverlayCamera">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/welcome_title"
-            android:id="@+id/textView"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:textColor="@android:color/white" />
+        <RelativeLayout
+            android:id="@+id/welcomeOverlaySub"
+            android:layout_width="fill_parent"
+            android:layout_height="250dp"
+            android:layout_centerVertical="true"
+            android:paddingTop="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/corners">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="@string/welcome_message"
-            android:id="@+id/textView2"
-            android:layout_below="@+id/textView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textColor="@android:color/white" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/welcome_title"
+                android:id="@+id/textView"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:textColor="@android:color/black" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/welcome_button"
-            android:id="@+id/welcomeButton"
-            android:textColor="@android:color/white"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/welcome_message"
+                android:id="@+id/textView2"
+                android:layout_below="@+id/textView"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textColor="@android:color/darker_gray" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/welcome_button"
+                android:id="@+id/welcomeButton"
+                android:textColor="#4285F4"
+                android:textStyle="bold"
+                android:paddingTop="14dp"
+                android:paddingBottom="14dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
     </RelativeLayout>
 
     <RelativeLayout
@@ -103,7 +117,7 @@
             android:id="@+id/commentBox"
             android:layout_width="fill_parent"
             android:layout_height="200dp"
-            android:background="#8c4b4b4b"
+            android:background="#d7ffffff"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -111,7 +125,6 @@
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp">
-
 
             <TextView
                 android:layout_width="wrap_content"
@@ -124,10 +137,18 @@
                 android:layout_toLeftOf="@+id/sendButton"
                 android:layout_toStartOf="@+id/sendButton"
                 android:gravity="center_vertical"
-                android:textColor="@android:color/white"
                 android:layout_below="@+id/types_spinner" />
 
-            <Button
+            <!--<Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/send_button"
+                android:id="@+id/sendButton"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"/>-->
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/send_button"
@@ -135,7 +156,12 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:textColor="@android:color/white"/>
+                android:textColor="#4285F4"
+                android:textStyle="bold"
+                android:paddingTop="14dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"/>
 
             <EditText
                 android:layout_width="wrap_content"
@@ -148,11 +174,8 @@
                 android:layout_alignRight="@+id/sendButton"
                 android:layout_alignEnd="@+id/sendButton"
                 android:layout_alignParentTop="true"
-                android:textColor="@android:color/white"
                 android:gravity="top"
-                android:hint="@string/comment_hint"
-                android:textColorHint="@color/hintColor"
-                android:textCursorDrawable="@null"/>
+                android:hint="@string/comment_hint"/>
 
             <Spinner
                 android:id="@+id/types_spinner"
@@ -161,8 +184,7 @@
                 android:layout_below="@+id/editText"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_above="@+id/sendButton"
-                android:textColor="#FFFFFF"/>
+                android:layout_above="@+id/sendButton"/>
         </RelativeLayout>
 
     </RelativeLayout>
@@ -170,7 +192,7 @@
     <RelativeLayout
         android:id="@+id/titleOverlay"
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_height="56dp"
         android:paddingTop="5dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
