--- a/smart-city/src/main/res/layout/activity_main.xml
+++ b/smart-city/src/main/res/layout/activity_main.xml
@@ -132,8 +132,8 @@
                 android:text=""
                 android:id="@+id/positionTextView"
                 android:layout_alignBottom="@+id/sendButton"
-                android:layout_alignLeft="@+id/editText"
-                android:layout_alignStart="@+id/editText"
+                android:layout_alignLeft="@+id/commentEditText"
+                android:layout_alignStart="@+id/commentEditText"
                 android:layout_toLeftOf="@+id/sendButton"
                 android:layout_toStartOf="@+id/sendButton"
                 android:gravity="center_vertical"
@@ -168,7 +168,7 @@
                 android:layout_height="70dp"
                 android:inputType="textMultiLine"
                 android:ems="10"
-                android:id="@+id/editText"
+                android:id="@+id/commentEditText"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignRight="@+id/sendButton"
@@ -181,18 +181,18 @@
                 android:id="@+id/types_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/editText"
+                android:layout_below="@+id/commentEditText"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_above="@+id/sendButton"/>
 
-            <ProgressBar
+            <!--<ProgressBar
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/progressBar"
                 android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true" />-->
         </RelativeLayout>
 
     </RelativeLayout>
