--- a/smart-city/src/main/res/layout/activity_main.xml
+++ b/smart-city/src/main/res/layout/activity_main.xml
@@ -2,11 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@android:color/black">
 
     <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:id="@+id/cameraView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
