--- a/smart-city/src/main/res/layout/activity_main.xml
+++ b/smart-city/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         <RelativeLayout
             android:id="@+id/welcomeOverlaySub"
             android:layout_width="fill_parent"
-            android:layout_height="250dp"
+            android:layout_height="150dp"
             android:layout_centerVertical="true"
             android:paddingTop="10dp"
             android:paddingLeft="10dp"
@@ -44,6 +44,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="@string/welcome_message"
@@ -102,6 +103,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="@string/quit_message"
